fit_predictor/mkp_aco/evaluates/coevolve/run2/2025-01-16_18-02-20/coevolve/generation_8/stdout_8.txt
Traceback (most recent call last):
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "/home/lars/workspace/COP/reevo_2/problems/mkp_aco/gpt.py", line 17
    heuristics = poisson.pmf(np.arange(1, len(probabilities) + 1), lambda=probabilities)
                                                                         ^
SyntaxError: invalid syntax
